      non-UTF-8 encoding (e.g. containing umlauts in Latin-1 encoding when
      the fontenc package is included with \usepackage[T1]{fontenc}) is read.

  From Mathew Robinson:
    - Improved threading performance by ensuring NodeInfo is shared
      across threads. Results in ~13% improvement for parallel builds
      (-j# > 1) with many shared nodes.

  From Mats Wichmann
    - Replace instances of string find method with "in" checks where
      the index from find() was not used.
    - CmdStringHolder fix from issue #3428
    - Turn previously deprecated debug options into failures:
      --debug=tree, --debug=dtree, --debug=stree, --debug=nomemoizer.
    - Experimental New Feature: Enable caching MSVC configuration
      If SCONS_CACHE_MSVC_CONFIG shell environment variable is set,
      SCons will cache the results of past calls to vcvarsall.bat to
      a file; integrates with existing memoizing of such vars.
      On vs2019 saves 5+ seconds per SCons invocation, which really
      helps test suite runs.
    - Remove deprecated SourceSignatures, TargetSignatures
    - Remove deprecated Builder keywords: overrides and scanner


RELEASE 3.1.1 - Mon, 07 Aug 2019 20:09:12 -0500

  From William Deegan:
    - Remove obsoleted references to DeciderNeedsNode which could cause crash when using --debug=explain

  From Jason Kenny
    - Add Fix and test for crash in 3.1.0 when using Decider('MD5-timestamp') and --debug=explain

  From Ben Reed:
    - Added -fmerge-all-constants to flags that get included in both CCFLAGS and LINKFLAGS.

  From Mathew Robinson:
    - Fix issue #3415 - Update remaining usages of EnvironmentError to SConsEnvironmentError
      this patch fixes issues introduced in 3.1.0 where any of the
      following would cause SCons to error and exit:
        - CacheDir not write-able
        - JSON encoding errors for CacheDir config
        - JSON decoding errors for CacheDir config


RELEASE 3.1.0 - Mon, 20 Jul 2019 16:59:23 -0700
